# seloria

./: .gitignore  Cargo.toml  PRD.md  README.md  config.json  test-config.json
apps/explorer/: README.md  components.json  package.json  pnpm-lock.yaml
apps/explorer/app/: globals.css  layout.tsx  page.tsx
apps/explorer/app/account/[pubkey]/: page.tsx
apps/explorer/app/accounts/: page.tsx
apps/explorer/app/block/[height]/: page.tsx
apps/explorer/app/blocks/: page.tsx
apps/explorer/app/claim/[id]/: page.tsx
apps/explorer/app/claims/: page.tsx
apps/explorer/app/transactions/: page.tsx
apps/explorer/components/: explorer-header.tsx  query-provider.tsx  terminal-components.tsx
apps/explorer/components/ui/: select.tsx
apps/explorer/lib/: api.ts  format.ts  queries.ts  websocket.ts
apps/issuer/: README.md  package.json
apps/issuer/src/: server.ts
apps/main/main/: package.json  pnpm-lock.yaml
apps/main/main/app/: layout.tsx  page.tsx
apps/main/main/app/api/cert/issue/: route.ts
apps/main/main/app/components/: certificate-form.tsx  hero-actions.tsx
apps/main/main/components/ui/: combobox.tsx
crates/seloria-consensus/: Cargo.toml
crates/seloria-consensus/src/: block_builder.rs  error.rs  events.rs  lib.rs  net.rs  proposer.rs  qc.rs  validator.rs
crates/seloria-core/: Cargo.toml
crates/seloria-core/src/: error.rs  lib.rs  serialize.rs
crates/seloria-core/src/crypto/: hash.rs  keys.rs  mod.rs  signature.rs
crates/seloria-core/src/types/: account.rs  agent_cert.rs  amm.rs  app.rs  block.rs  claim.rs  mod.rs  namespace.rs  token.rs  transaction.rs
crates/seloria-mempool/: Cargo.toml
crates/seloria-mempool/src/: lib.rs  ordering.rs  pool.rs
crates/seloria-node/: Cargo.toml
crates/seloria-node/src/: cli.rs  config.rs  main.rs  node.rs  snapshot.rs  txgen.rs
crates/seloria-rpc/: Cargo.toml
crates/seloria-rpc/src/: error.rs  lib.rs
crates/seloria-rpc/src/http/: handlers.rs  routes.rs
crates/seloria-rpc/src/ws/: events.rs  mod.rs  server.rs
crates/seloria-state/: Cargo.toml
crates/seloria-state/src/: error.rs  lib.rs  merkle.rs  state.rs
crates/seloria-state/src/storage/: memory.rs  mod.rs  persistent.rs
crates/seloria-vm/: Cargo.toml
crates/seloria-vm/src/: error.rs  executor.rs  lib.rs  validation.rs
crates/seloria-vm/src/opcodes/: agent_cert.rs  amm.rs  claim.rs  kv.rs  mod.rs  token.rs  transfer.rs
docs/: COMMITTEE_EC2_LOCAL.md  CONFIG_TEMPLATE.json  OPENCLAW_AGENTS.md  OPENCLAW_NODE_OPERATORS.md
scripts/: release.sh
scripts/amm-activity/: amm.mjs  config.json
scripts/llm-activity/: README.md  activity.mjs  config.example.json
tests/: claim_tests.rs  consensus_tests.rs  single_node_tests.rs
