[workspace]
resolver = "2"
members = [
    "crates/seloria-core",
    "crates/seloria-state",
    "crates/seloria-vm",
    "crates/seloria-consensus",
    "crates/seloria-mempool",
    "crates/seloria-rpc",
    "crates/seloria-node",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Seloria Contributors"]

[workspace.dependencies]
# Internal crates
seloria-core = { path = "crates/seloria-core" }
seloria-state = { path = "crates/seloria-state" }
seloria-vm = { path = "crates/seloria-vm" }
seloria-consensus = { path = "crates/seloria-consensus" }
seloria-mempool = { path = "crates/seloria-mempool" }
seloria-rpc = { path = "crates/seloria-rpc" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
blake3 = "1.5"
rand = "0.8"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Utilities
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
futures-util = "0.3"
