[package]
name = "seloria-consensus"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
seloria-core = { workspace = true }
seloria-state = { workspace = true }
seloria-vm = { workspace = true }
seloria-mempool = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
