[package]
name = "seloria-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
seloria-core = { workspace = true }
seloria-state = { workspace = true }
seloria-vm = { workspace = true }
seloria-mempool = { workspace = true }
seloria-consensus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
