[package]
name = "seloria-state"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
seloria-core = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
